Fix the realtime in queing and overlapping line

--- a/resources/assets/sass/telemedicine_panel.scss
+++ b/resources/assets/sass/telemedicine_panel.scss
@@ -126,7 +126,7 @@
     content: "";
     border-bottom: 2px solid #4bb543;
     width: 100%;
-    left: 60%;
+    left: 40%;
     z-index: 3;
     margin-top: -30px;
   }
